fixed background behind action buttons

--- a/app/public/css/App.scss
+++ b/app/public/css/App.scss
@@ -299,6 +299,7 @@ body {
 .project-card-image-wrapper {
 	width: 100px;
 	height: 100px;
+	margin-bottom: 0;
 }
 
 .project-card-image {
@@ -314,12 +315,18 @@ body {
 	justify-content: space-evenly;
 }
 
-.project-card-actions-background {
-	background-color: hsl(149, 66%, 40%);
+.project-card-actions-background-wrapper {
+	padding-top: 10px;
 	position: absolute;
-	width: 100%;
 	top: 0;
 	left: 0;
+	width: 100%;
+}
+
+.project-card-actions-background {
+	background-color: hsl(149, 66%, 40%);
+	width: 100%;
+	height: 100%;
 }
 
 .project-card-actions > * {
@@ -360,7 +367,6 @@ body {
 }
 
 .project-card-languages {
-	margin-top: -1px;
 	padding: 17px 12px 7px 12px;
 	flex: 1;
 }
@@ -378,6 +384,14 @@ body {
 	margin-bottom: 8px;
 	box-shadow: 0 2px #444444;
 }
+
+///////////////////////////////////////////////////////////////////////////////////////////////////
+// ██       █████  ███    ██  ██████  ██    ██  █████   ██████  ███████ ███████
+// ██      ██   ██ ████   ██ ██       ██    ██ ██   ██ ██       ██      ██
+// ██      ███████ ██ ██  ██ ██   ███ ██    ██ ███████ ██   ███ █████   ███████
+// ██      ██   ██ ██  ██ ██ ██    ██ ██    ██ ██   ██ ██    ██ ██           ██
+// ███████ ██   ██ ██   ████  ██████   ██████  ██   ██  ██████  ███████ ███████
+///////////////////////////////////////////////////////////////////////////////////////////////////
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // ███████  ██████ ██████   ██████  ██      ██           ██████  █████  ██████   ██████  ██    ██ ███████ ███████ ██
